--- a/station/index.html
+++ b/station/index.html
@@ -42,8 +42,8 @@
 <div class="container">
 	<div ui-view></div>
 
+	<br/>
 </div>
-
 
 <script type="text/ng-template" id="partials/start.html">
 
@@ -68,7 +68,7 @@
 		<tbody>
 		<tr ng-repeat="p in $data">
 			<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
-			<td><span ui-sref='edit({id: p._id})'><i class="fa fa-edit"></i></span></td>
+			<td><span ui-sref='person({id: p._id})'><i class="fa fa-edit"></i></span></td>
 		</tr>
 		</tbody>
 	</table>
@@ -90,64 +90,204 @@
 		<tbody>
 		<tr ng-repeat="p in $data">
 			<td data-title="'Name'" filter="{ 'name': 'text' }" sortable="'name'" ng-bind="p.name"></td>
-			<td><span ui-sref='edit({id: p._id})'><i class="fa fa-edit"></i></span></td>
+			<td><span ui-sref='organisation({id: p._id})'><i class="fa fa-edit"></i></span></td>
 		</tr>
 		</tbody>
 	</table>
 
 </script>
 
-<script type="text/ng-template" id="partials/edit.html">
+<script type="text/ng-template" id="partials/editor.html">
 
-	<h1>Bearbeiten</h1>
+	<h1><span ng-bind="modename"></span> bearbeiten</h1>
 
-	<p>ID:</p>
-	<p ng-bind="item._id"></p>
+	<p>ID: <span ng-bind="item._id"></span></p>
 
 	<form role="form">
 
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name" placeholder="Enter name" ng-value="item.name">
+			<input type="text" class="form-control" id="name" placeholder="Enter name" ng-model="item.name">
 		</div>
+
+		<hr/>
 
 		<div class="form-group">
 			<label>Aliases</label>
 
 			<div class="has-feedback">
-				<input type="text" class="form-control" placeholder="Aliases" ng-model="edit.alias" key-bind="{ enter: 'selectAlias()'}">
-				<span ng-show="canSelectAlias()" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="selectAlias()"></span>
+				<input type="text" class="form-control" placeholder="Aliases" ng-model="edit.alias" ng-enter="addEntry('aliases', edit.alias)">
+				<span ng-show="canAddEntry('aliases', edit.alias)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('aliases', edit.alias)"></span>
 			</div>
 			<div class="list-sel-ctn">
-				<div ng-repeat="o in item.aliases" class="list-sel-item"><span ng-bind="o"></span><i class="glyphicon glyphicon-remove" ng-click="removeAlias(o)"></i></div>
+				<div ng-repeat="o in item.aliases" class="list-sel-item"><span ng-bind="o"></span>
+					<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeEntry('aliases', o)"></i></div>
 			</div>
 		</div>
+
+		<hr/>
 
 		<div class="form-group">
 			<label>Tags</label>
 
 			<div class="has-feedback">
-				<input type="text" class="form-control" placeholder="Tags" ng-model="edit.tag" key-bind="{ enter: 'selectTag()'}">
-				<span ng-show="canSelectTag()" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="selectTag()"></span>
+				<input type="text" class="form-control" placeholder="Tags" ng-model="edit.tag" ng-enter="addEntry('tags', edit.tag)">
+				<span ng-show="canAddEntry('tags', edit.alias)" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="addEntry('tags', edit.tag)"></span>
 			</div>
 			<div class="list-sel-ctn">
-				<div ng-repeat="o in item.tags" class="list-sel-item"><span ng-bind="o"></span><i class="glyphicon glyphicon-remove" ng-click="removeTag(o)"></i></div>
+				<div ng-repeat="o in item.tags" class="list-sel-item"><span ng-bind="o"></span>
+					<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeEntry('tags', o)"></i></div>
 			</div>
 		</div>
+
+		<hr/>
 
 		<div class="form-group">
-			<label>Sources</label>
+			<label>Quellen</label>
 
 			<div class="has-feedback">
-				<input type="text" class="form-control" placeholder="Source" ng-model="edit.src" key-bind="{ enter: 'selectSource()'}">
-				<span ng-show="canSelectSource()" class="glyphicon glyphicon-plus-sign form-control-feedback clickable" ng-click="selectSource()"></span>
+				<input type="url" class="form-control" placeholder="Source" ng-model="edit.src_link" ng-enter="addSource(edit.src_link, edit.src_remark)">
+			</div>
+			<div class="has-feedback">
+				<input type="text" class="form-control" placeholder="Comment" ng-model="edit.src_remark" ng-enter="addSource(edit.src_link, edit.src_remark)">
 			</div>
 			<div class="list-sel-ctn">
-				<div ng-repeat="o in item.sources" class="list-sel-item"><a ng-href="{{o.url}}" ng-bind="o.url"></a> (<span ng-bind="o.updated"></span>)<i class="glyphicon glyphicon-remove" ng-click="removeTag(o)"></i></div>
+				<div ng-repeat="o in item.sources" class="list-sel-item">
+					<a ng-href="{{o.url}}" ng-bind="o.url"></a>
+					<span ng-bind="o.remark"></span>
+					<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeEntry('sources', o)"></i>
+				</div>
 			</div>
 		</div>
 
+		<hr/>
+
 	</form>
+
+	<div ng-repeat="d in item.data" ng-switch="d.key">
+		<div ng-switch-when="titles">
+			<form class="form-inline">
+				<div class="form-group">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung" ng-model="d.desc">
+				</div>
+				<div class="form-group">
+					<label>Titel</label>
+					<input type="text" class="form-control" placeholder="Titel" ng-model="d.value">
+				</div>
+				<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeData(d)"></i>
+			</form>
+		</div>
+
+		<div ng-switch-when="address">
+			<form class="form-inline">
+				<div class="form-group">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung" ng-model="d.desc">
+				</div>
+				<div class="form-group">
+					<label>Name</label>
+					<input type="text" class="form-control" placeholder="Name" ng-model="d.value.name">
+				</div>
+				<div class="form-group">
+					<label>Stadt</label>
+					<input type="text" class="form-control" placeholder="Stadt" ng-model="d.value.city">
+				</div>
+				<div class="form-group">
+					<label>Adresse</label>
+					<input type="text" class="form-control" placeholder="Adresse" ng-model="d.value.addr">
+				</div>
+				<div class="form-group">
+					<label>Land</label>
+					<input type="text" class="form-control" placeholder="Land" ng-model="d.value.country">
+				</div>
+				<div class="form-group">
+					<label>Postleitzahl</label>
+					<input type="text" class="form-control" placeholder="Postleitzahl" ng-model="d.value.postcode">
+				</div>
+				<div class="form-group">
+					<label>Telefon</label>
+					<input type="text" class="form-control" placeholder="Telefon" ng-model="d.value.tel">
+				</div>
+				<div class="form-group">
+					<label>Fax</label>
+					<input type="text" class="form-control" placeholder="Fax" ng-model="d.value.fax">
+				</div>
+				<div class="form-group">
+					<label>E-Mail</label>
+					<input type="text" class="form-control" placeholder="E-Mail" ng-model="d.value.email">
+				</div>
+				<div class="form-group">
+					<label>www</label>
+					<input type="text" class="form-control" placeholder="www" ng-model="d.value.www">
+				</div>
+
+
+				<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeData(d)"></i>
+			</form>
+		</div>
+
+		<div ng-switch-when="members">
+			<form class="form-inline">
+				<div class="form-group">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung" ng-model="d.desc">
+				</div>
+				<div class="form-group">
+					<label>Anzahl der Mitglieder</label>
+					<input type="text" class="form-control" placeholder="Anzahl der Mitglieder" ng-model="d.value">
+				</div>
+				<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeData(d)"></i>
+			</form>
+		</div>
+
+
+		<div ng-switch-when="organisations">
+			<form class="form-inline">
+				<div class="form-group">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung" ng-model="d.desc">
+				</div>
+				<div class="form-group">
+					<label>Anzahl der Mitgliedsorganisationen</label>
+					<input type="text" class="form-control" placeholder="Anzahl der Mitgliedsorganisationen" ng-model="d.value">
+				</div>
+				<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeData(d)"></i>
+			</form>
+		</div>
+
+		<div ng-switch-when="description">
+			<form class="form-inline">
+				<div class="form-group">
+					<label>Beschreibung der Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung der Beschreibung" ng-model="d.desc">
+				</div>
+				<div class="form-group">
+					<label>Beschreibung</label>
+					<input type="text" class="form-control" placeholder="Beschreibung" ng-model="d.value">
+				</div>
+				<i class="glyphicon glyphicon-remove btn-remove-data" ng-click="removeData(d)"></i>
+			</form>
+		</div>
+
+		<hr/>
+
+	</div>
+
+	<div class="btn-group">
+		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+			Datenfeld hinzufügen <span class="caret"></span>
+		</button>
+			<ul class="dropdown-menu up" role="menu">
+				<li><a href ng-click="addData('titles')">Titel</a></li>
+				<li><a href ng-click="addData('address')">Adresse</a></li>
+				<li><a href ng-click="addData('description')">Beschreibung</a></li>
+				<li ng-if="!isPerson"><a href ng-click="addData('members')">Anzahl der Mitglieder</a></li>
+				<li ng-if="!isPerson"><a href ng-click="addData('organisations')">Anzahl der Mitgliedsorganisationen</a></li>
+			</ul>
+	</div>
+
+	<!--<hr/>{{item.data}}<hr/>{{item}}-->
 
 </script>
 
