--- a/station/index.html
+++ b/station/index.html
@@ -34,11 +34,11 @@
 				Lobbyradarstation</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right" ng-if="loggedIn">
+			<ul class="nav navbar-nav navbar-right" ng-if="loggedInUser">
 				<li class="active" ui-sref-active="active"><a href ui-sref="start">Start</a></li>
 				<li ui-sref-active="active"><a href ui-sref="persons">Personen</a></li>
 				<li ui-sref-active="active"><a href ui-sref="organisations">Organisationen</a></li>
-				<li ui-sref-active="active"><a href ui-sref="users">Benutzerinnen</a></li>
+				<li ui-sref-active="active" ng-if="loggedInUser.admin"><a href ui-sref="users">Benutzerinnen</a></li>
 			</ul>
 		</div>
 	</div>
@@ -403,17 +403,16 @@
 			<form class="form form-signin" role="form">
 				<div class="form-group input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-					<input id="login-user" type="text" name="username" class="form-control input-block-level" placeholder="Name" ng-model="login.name" required>
+					<input id="login-user" type="text" name="username" class="form-control input-block-level" placeholder="Name" ng-model="login.username" required>
 				</div>
 				<div class="form-group input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-					<input id="login-pass" type="password" name="password" class="form-control input-block-level" placeholder="Passwort" ng-model="login.pass" required>
+					<input id="login-pass" type="password" name="password" class="form-control input-block-level" placeholder="Passwort" ng-model="login.password" required>
 				</div>
 				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block" ng-click="loginUser()">Login</button>
 				</div>
-				<div ng-show="accessdenied" class="alert alert-error">Seems like you tried accessing something you don't have access to...</div>
-				<div ng-show="error" class="alert alert-error" ng-bind="error"></div>
+				<div ng-show="error" class="alert alert-danger" ng-bind="error.data"></div>
 			</form>
 		</div>
 	</div>
